<resources>
    <string name="app_name">玩个Bug</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="news_string">资讯</string>
    <string name="code_string">技术</string>
    <string name="recreation_string">娱乐</string>
    <string name="user_string">个人</string>
    <string name="share_string">分享</string>
    <string name="about_string">关于</string>
    <string name="project_string">项目</string>
    <string name="system_string">体系</string>
    <string name="home_string">首页</string>
    <string name="search_hot_key_string">搜索热词</string>
    <string name="search_history_string">搜索历史</string>
    <string name="clean_string">清空</string>
    <string name="search_hint_string">多个关键词，用空格隔开</string>
    <string name="todo_string">备忘录</string>
    <string name="settings_string">设置</string>
    
    
    
    
   <!-- behavior-->
   <string name="title_bar_behavior">com.example.weizhenbin.wangebug.views.behaviors.TitleBarBehavior</string>
    <string name="todo_title_string">事件标题</string>
    <string name="todo_content_string">事件内容</string>
    <string name="confirm_string">确定</string>
    <string name="cancel_string">取消</string>
    <string name="hint_time_string">提醒时间</string>
    <string name="save_string">保存</string>
    <string name="reset_string">重置</string>
    <string name="open_todo_floating_window_remind_string">开启Todo悬浮窗快捷功能</string>
    <string name="permission_request_string">权限申请</string>
    <string name="open_string">开启</string>
    <string name="floating_window_permission_request_describe_string">开启Todo悬浮窗需要授权应用开启悬浮窗功能</string>
    <string name="save_todo_remind_string">是否保存事件</string>
    <string name="no_floating_window_permission_remind_string">悬浮窗权限未开启,无法使用Todo快捷功能</string>
    <string name="done_string">完成</string>
    <string name="del_string">删除</string>
    <string name="edit_string">编辑</string>
    <string name="event_string">事件</string>
    <string name="hide_tab_hint_string">开启浏览列表自动隐藏底部Tab功能</string>
    <string name="no_data_string">没有数据</string>
    <string name="retry_string">点击重试</string>
    <string name="loading_string">数据加载中</string>
    <string name="input_key_string">输入关键词</string>
    <string name="clean_cache_string">清除缓存</string>
    <string name="remind_time_invalid_string">提醒时间已过时</string>
    <string name="open_notification_sound_hint_string">开启通知声音</string>
    <string name="warn_string">应用数据存于本地,切勿轻易清除应用数据</string>
    <string name="collect_string">收藏</string>
    <string name="cancel_collect_string">取消收藏</string>
    <string name="collect_list_string">收藏夹</string>
    <string name="browser_open_string">浏览器打开</string>
    <string name="copy_link_string">复制链接</string>
    <string name="copy_success_string">复制成功</string>
    <string name="check_version_string">检查新版本</string>
    <string name="new_version_string">有新版本 (%1$s)</string>
    <string name="version_string">玩个Bug V%1$s</string>
    <string name="project_brief_string">项目简介</string>
    <string name="project_content_string">项目内容</string>
    <string name="project_brief_content_string">本项目提供一些Android开发的学习内容，
        内容来源鸿洋的玩Android项目，以及一些资讯类和娱乐类的内容，仅作为开发学习。</string>
    <string name="project_content_detail_string">
        技术模块内容来自鸿洋的玩Android项目\n
        http://www.wanandroid.com \n
        资讯模块内容来自阿里云市场付费开放Api \n
        https://market.aliyun.com/products/57126001/cmapi011150.html#sku=yuncode515000003 \n
        娱乐模块内容来自万维易源付费开放Api \n
        https://www.showapi.com/api/view/255
    </string>
    <string name="developer_string">开发者</string>
    <string name="developer_info_string">
        一名热爱开发的普通Android应用开发 \n
        邮箱：709287882@qq.com \n
        CSDN博客地址：https://blog.csdn.net/u011453163 (比较懒)
    </string>
    <string name="copyright_string">版权声明</string>
    <string name="copyright_content_string">本项目所有内容仅供学习，不做任何商业用途</string>
</resources>
