<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_code"
            android:icon="@drawable/code"
            android:checked="true"
            android:title="@string/code_string" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/news"
            android:title="@string/news_string" />
        <item
            android:id="@+id/nav_recreation"
            android:icon="@drawable/recreation"
            android:visible="false"
            android:title="@string/recreation_string" />
    </group>
    <item android:title="@string/user_string">
        <menu>
            <item
                android:id="@+id/nav_todo"
                android:icon="@drawable/todo"
                android:title="@string/todo_string" />
            <item
                android:id="@+id/nav_collect"
                android:icon="@drawable/collect"
                android:title="@string/collect_list_string" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings"
                android:title="@string/settings_string" />
        </menu>
    </item>

</menu>
