<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:layout_height="match_parent">
    <com.example.weizhenbin.wangebug.views.TitleBar
        android:id="@+id/tb_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftSrc="@drawable/back"
        app:titleSize="16sp"
        app:titleColor="#fff"
        app:title="@string/settings_string"
        android:background="@color/colorPrimary"/>
    <TextView
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:text="功能设置"
        android:padding="8dp"
        android:textColor="@color/colorPrimary"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:text="@string/open_todo_floating_window_remind_string"
            android:textSize="14sp"
            android:layout_weight="1"
            android:layout_marginRight="8dp"
            android:textColor="@color/colorGray6"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/cb_todo_open"
            android:layout_width="wrap_content"
            android:theme="@style/CheckBox"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:text="体验设置"
        android:padding="8dp"
        android:textColor="@color/colorPrimary"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:text="@string/hide_tab_hint_string"
            android:textSize="14sp"
            android:layout_weight="1"
            android:layout_marginRight="8dp"
            android:textColor="@color/colorGray6"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/cb_hide_tab_open"
            android:layout_width="wrap_content"
            android:theme="@style/CheckBox"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:text="@string/open_notification_sound_hint_string"
            android:textSize="14sp"
            android:layout_weight="1"
            android:layout_marginRight="8dp"
            android:textColor="@color/colorGray6"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/cb_todo_notification_sound_open"
            android:layout_width="wrap_content"
            android:theme="@style/CheckBox"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGrayE"
        />
    <TextView
        android:id="@+id/tv_clean_cache"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/clean_cache_string"
        android:paddingLeft="16dp"
        android:textSize="14sp"
        android:gravity="center_vertical"
        />
    <TextView
        android:id="@+id/tv_about"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/about_string"
        android:paddingLeft="16dp"
        android:textSize="14sp"
        android:gravity="center_vertical"
        />
</LinearLayout>