<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
        <EditText
            android:id="@+id/ed_title"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/bottom_line_bg_gray"
            android:hint="@string/todo_title_string"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite150a"
            android:textCursorDrawable="@drawable/cursor_style_gray"
            android:textSize="14sp" />
        <EditText
            android:id="@+id/ed_content"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bottom_line_bg_gray"
            android:gravity="left"
            android:hint="@string/todo_content_string"
            android:inputType="textMultiLine"
            android:padding="4dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite150a"
            android:textCursorDrawable="@drawable/cursor_style_gray"
            android:textSize="14sp" />
        <LinearLayout
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/tv_reset"
                android:text="@string/reset_string"
                android:padding="8dp"
                android:textSize="14sp"
                android:background="?android:attr/selectableItemBackground"
                android:textColor="@color/colorWhite150a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_save"
                android:text="@string/save_string"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:layout_marginLeft="8dp"
                android:textSize="14sp"
                android:paddingLeft="16dp"
                android:layout_marginRight="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
</LinearLayout>