<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:clickable="true"
    android:id="@+id/ll_assist"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_hot_key_string"
        android:padding="8dp"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp" />
    <com.zhy.view.flowlayout.TagFlowLayout
        android:id="@+id/tfl_hot_key"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_history_string"
            android:padding="8dp"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/tv_clean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clean_string"
            android:padding="8dp"
            android:background="?android:attr/selectableItemBackground"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" />
    </RelativeLayout>
    <com.zhy.view.flowlayout.TagFlowLayout
        android:id="@+id/tfl_search_history"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/shape_gradient_graye_white"
        />
</LinearLayout>