<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:layout_height="match_parent">
    <com.example.weizhenbin.wangebug.views.TitleBar
        android:id="@+id/tb_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftSrc="@drawable/back"
        app:titleSize="16sp"
        app:titleColor="@color/colorWhite"
        app:rightSrc="@drawable/done"
        app:title="@string/todo_string"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:visibility="gone"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_remind_time"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="8dp"
                android:layout_toLeftOf="@+id/iv_del_remind_time"
                android:background="@drawable/click_pressed_white"
                android:drawableLeft="@drawable/alarm"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/hint_time_string"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/iv_del_remind_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/click_pressed_white"
                android:padding="10dp"
                android:src="@drawable/del_gray" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:visibility="gone"
            android:background="@drawable/shape_gradient_gray_white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ed_title"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/bottom_line_bg_gray"
                android:hint="@string/todo_title_string"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorGray2"
                android:textCursorDrawable="@drawable/cursor_style_gray"
                android:textSize="14sp" />
        </RelativeLayout>

        <EditText
            android:id="@+id/ed_content"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bottom_line_bg_gray"
            android:gravity="left"
            android:hint="@string/todo_content_string"
            android:inputType="textMultiLine"
            android:padding="4dp"
            android:textColor="@color/colorGray2"
            android:textCursorDrawable="@drawable/cursor_style_gray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_loc"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/click_pressed_white"
            android:drawableLeft="@drawable/loc"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:textSize="14sp"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>